@startuml

title __NOTIFICATIONS's Class Diagram__\n

  namespace com.code.group3finalproject {
    namespace ui.notifications {
      class com.code.group3finalproject.ui.notifications.NotificationRecycleAdapter {
          - stocks : List<Stock>
          + NotificationRecycleAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.notifications {
      class com.code.group3finalproject.ui.notifications.NotificationRecycleAdapter.ViewHolder {
          + stockSymbol : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.notifications {
      class com.code.group3finalproject.ui.notifications.NotificationsFragment {
          + onCreateOptionsMenu()
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.notifications {
      class com.code.group3finalproject.ui.notifications.NotificationsViewModel {
          - mText : MutableLiveData<String>
          + NotificationsViewModel()
          + getText()
      }
    }
  }
  

  com.code.group3finalproject.ui.notifications.NotificationRecycleAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.code.group3finalproject.ui.notifications.NotificationRecycleAdapter +-down- com.code.group3finalproject.ui.notifications.NotificationRecycleAdapter.ViewHolder
  com.code.group3finalproject.ui.notifications.NotificationRecycleAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.code.group3finalproject.ui.notifications.NotificationsFragment -up-|> androidx.fragment.app.Fragment
  com.code.group3finalproject.ui.notifications.NotificationsFragment o-- com.code.group3finalproject.databinding.FragmentNotificationsBinding : binding
  com.code.group3finalproject.ui.notifications.NotificationsFragment o-- com.code.group3finalproject.ui.notifications.NotificationsViewModel : notificationsViewModel
  com.code.group3finalproject.ui.notifications.NotificationsViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
